--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,11 @@
   height: 250px;
   background-color: green;
 }
+
+body {
+  background: url('./me.jpg') no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+}
