--- a/src/App.css
+++ b/src/App.css
@@ -31,12 +31,14 @@
   grid-gap: 10px;
   grid-template-columns: repeat(5, 1fr);
   grid-auto-rows: minmax(50px, auto);
-background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);}
+
+ }
 
 .portrait{
   grid-column: 2 / 5;
   grid-row: 1/ 8;
   background: url('./me.jpg') no-repeat center;
+  
 }
 
 .LinkedInButton {
@@ -54,10 +56,11 @@ background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);}
   grid-row: 7 / 8;
 }
 
-/* body {
-  background: url('./me.jpg') no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-} */
+body {
+  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+}
+
+.NavBar {
+  color: Black;
+  font-family: Arial, Helvetica, sans-serif
+}
