--- a/src/App.css
+++ b/src/App.css
@@ -7,21 +7,34 @@
 }
 
 .LitHop {
-  height: 250px;
+  height: 80vh;
   margin: 10px;
   border-radius: 25px;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: left;
-  background: url('./img/lithop_logo.png') no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+  position: relative;
 }
+
+.LitHopDemo {
+  grid-column: 3/4;
+  margin-top: 15px;
+}
+/*
+background: url('./img/lithop_logo.png') no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover; */
 .Faukemon {
-  height: 250px;
+  height: 80vh;
+  margin: 10px;
+  border-radius: 25px;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: left;
   background: url('./img/pokemon_img.jpeg') no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
@@ -32,7 +45,12 @@
 
 
 .HatPics {
-  height: 250px;
+  margin: 10px;
+  border-radius: 25px;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: left;
   background-color: green;
 }
 
@@ -42,28 +60,62 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-auto-rows: minmax(50px, auto);
   position: relative;
+  text-align: center;
+ }
+
+ .BottomButtons {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+   grid-auto-rows: minmax(50px, auto);
  }
 
 .HomePic  {
-  grid-column:  5/ 6;
+  grid-column:  3/ 4;
   grid-row: 1/ 2;
   border-radius: 50%;
+  width: 100%;
 }
+
+/* .ButtonContainer {
+  width: 100%;
+  grid-row: 5/6;
+} */
 
 .LinkedInButton {
   grid-column: 2 / 3;
   grid-row: 5 / 6;
+  width: 100%;
+
 }
 
 .GithubButton {
   grid-column: 3 / 4;
   grid-row: 5 / 6;
+  width: 100%;
+
 }
 
 .TwitterButton {
   grid-column: 4 / 5;
   grid-row: 5 / 6;
+  width: 100%;
+
 }
+
+.MediumButton {
+  grid-column: 4/5;
+  grid-row: 1/2;
+  width: 100%;
+  text-align: right;
+}
+
+.InstagramButton {
+  grid-column: 6/7;
+  grid-row: 1/2;
+  width: 100%;
+  text-align: left;
+}
+
 
 body {
   background-color: #5900b3;
@@ -71,37 +123,44 @@ body {
 
 .Occupation {
   grid-column: 1/6;
-  grid-row: 1/2;
-  text-align: left;
-  margin: 30px;
+  grid-row: 2/3;
+  text-align: center;
   color: white;
   font-family: Apple Chancery, cursive;
   font-size: 255%;
   position: absolute;
   top: 50%; left: 50%;
   transform: translate(-50%,-50%);
+  width: 100%;
 }
 
 .Name {
   grid-column: 1 / 6;
-  grid-row: 2 / 3;
+  grid-row: 3 / 4;
   color: white;
   font-family: Apple Chancery, cursive;
   position: absolute;
-  top: 50%; left: 50%;
+  left: 50%;
   transform: translate(-50%,-50%);
+  width: 100%;
 }
 
 .Motto {
   grid-column: 1/6;
-  grid-row: 3/4;
+  grid-row: 4/5;
   text-align: center;
   color: white;
   font-family: Comic Sans MS, Comic Sans, cursive;
   position: absolute;
   top: 50%; left: 50%;
   transform: translate(-50%,-50%);
-  padding-top: 10px
+  padding-top: 10px;
+  width: 100%;
+}
+
+.MottoContact {
+  font-size: 20px;
+  width: 100%
 }
 
 .Bio {
@@ -125,10 +184,66 @@ body {
 }
 
 .BioImage {
+  width: 100%;
   margin-left: 10px;
   margin-top: 10px;
 }
 
 . Tab {
   background-color: #5900b3;
+}
+
+.Technologies {
+  margin: 15px;
+  border-radius: 25px;
+  background: white;
+  height: 400px;
+  overflow-y: scroll;
+  width: 100%;
+}
+
+h2{
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+    .LitHop {
+      display: grid;
+      grid-gap: 10px;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 1fr auto;
+    }
+
+    .Technologies {
+      grid-row: 1/2;
+      grid-column: 1/2;
+      margin: auto;
+    }
+
+    .LitHopDemo {
+      grid-row: 2/3;
+      grid-column: 1/2
+    }
+
+    .Bio {
+      display: grid;
+      grid-gap: 10px;
+      grid-template-columns: 1fr ;
+      grid-template-rows: 1fr ;
+    }
+
+    .BioImage {
+      width: 100%;
+      grid-row: 1/2;
+      grid-column: 1/2;
+      margin: auto;
+    }
+
+    .BioText {
+      grid-row: 2/3;
+      grid-column: 1/2;
+      width: 100%;
+      margin: auto;
+    }
+
 }
