--- a/src/App.css
+++ b/src/App.css
@@ -6,20 +6,27 @@
   text-align: center;
 }
 
-.LitHop {
+.ProjectLayout {
   height: 80vh;
   margin: 10px;
   border-radius: 25px;
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   text-align: left;
   position: relative;
 }
 
-.LitHopDemo {
-  grid-column: 3/4;
-  margin-top: 15px;
+.Demo {
+  grid-column: 2/3;
+  margin: 15px;
+}
+
+.DemoText {
+  color: white;
+  font-family: Comic Sans MS, Comic Sans, cursive;
+  font-size: 20px;
+  width: 100%
 }
 /*
 background: url('./img/lithop_logo.png') no-repeat center center fixed;
@@ -27,32 +34,15 @@ background: url('./img/lithop_logo.png') no-repeat center center fixed;
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover; */
-.Faukemon {
-  height: 80vh;
-  margin: 10px;
-  border-radius: 25px;
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 1fr 1fr 1fr;
-  text-align: left;
-  background: url('./img/pokemon_img.jpeg') no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-}
+
+/* background: url('./img/pokemon_img.jpeg') no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover; */
 
 
 
-.HatPics {
-  margin: 10px;
-  border-radius: 25px;
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 1fr 1fr 1fr;
-  text-align: left;
-  background-color: green;
-}
 
 .Home {
   display: grid;
@@ -118,7 +108,7 @@ background: url('./img/lithop_logo.png') no-repeat center center fixed;
 
 
 body {
-  background-color: #5900b3;
+  background-color: #4d4d4d;
 }
 
 .Occupation {
@@ -207,7 +197,7 @@ h2{
 }
 
 @media screen and (max-width: 768px) {
-    .LitHop {
+    .ProjectLayout {
       display: grid;
       grid-gap: 10px;
       grid-template-columns: 1fr;
@@ -220,9 +210,14 @@ h2{
       margin: auto;
     }
 
-    .LitHopDemo {
+    .Demo {
       grid-row: 2/3;
-      grid-column: 1/2
+      grid-column: 1/2;
+      overflow-y: scroll;
+      height: 60%;
+    }
+    .DemoText{
+      width: 100%;
     }
 
     .Bio {
@@ -246,4 +241,20 @@ h2{
       margin: auto;
     }
 
+    .ProjectContainer {
+      position: relative;
+      margin: 0;
+      padding-bottom: 6rem;
+      min-height: 100%;
+    }
+
+    .Buttons {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      left: 0;
+
+      background-color: #efefef;
+      text-align: center;
+    }
 }
